fixed spacing

--- a/unit1/self-portrait/style.css
+++ b/unit1/self-portrait/style.css
@@ -118,7 +118,7 @@ in the Universal Century Timeline.
   display: block;
   position: absolute;
   z-index: 1;
-  left: 25%;
+  left: 29%;
 }
 
 /*
@@ -134,7 +134,7 @@ UC timeline.
   display: block;
   position: absolute;
   z-index: 1;
-  left:35%;
+  left:39%;
   background-position-x: 90%;  
 }
 
@@ -152,7 +152,7 @@ The Gundam in the serise is named Gundam GP01 "Zephyranthes"
   display: block;
   position: absolute;
   z-index: 1;
-  left:45%;  
+  left:49%;  
 }
 
 h2 {
